--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ color: #ffffff;
 max-width: 1440px;
 padding: 188px 0;
 text-align: center;
+background-position: center;
 
 }
 
@@ -19,6 +20,7 @@ text-align: center;
     width: 1158px;
     padding:0 15px;
     margin: 0 auto;
+    margin-bottom: 8px;
 }
 
 
@@ -89,6 +91,7 @@ header {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-style:hover,
@@ -180,10 +183,13 @@ header {
     font-size:18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    color: #4d5ae5;
+    color: #404bbf;
     font-family: "Raleway", sans-serif;
     text-transform: uppercase;
     margin-right: 76px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+
 }
 
 .logo-studio {
@@ -197,6 +203,7 @@ header {
     letter-spacing: 0.02em;
     color: #434455;
     font-family: "Roboto", sans-serif;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-font:hover,
 .address-font:focus {
