--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,24 @@
 body {
-    font-family:"Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
 }
 
 .effecive-solutions {
-background-image: linear-gradient(to bottom, rgba(46, 47, 66,0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-image.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-color: #ffffff;
-max-width: 1440px;
-padding: 188px 0;
-text-align: center;
-background-position: center;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-image.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #ffffff;
+    max-width: 1440px;
+    padding: 188px 0;
+    text-align: center;
+    background-position: center;
 
 }
 
 .container {
     width: 1158px;
-    padding:0 15px;
+    padding: 0 15px;
     margin: 0 auto;
     margin-bottom: 8px;
 }
@@ -40,6 +40,7 @@ img {
     clip: rect(0, 0, 0, 0);
     border: 0;
 }
+
 .header-container {
     display: flex;
     flex-direction: row;
@@ -47,9 +48,9 @@ img {
 }
 
 .header-box {
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
-                0px 1px 1px rgba(46, 47, 66, 0.16), 
-                0px 1px 6px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 header {
@@ -61,7 +62,7 @@ header {
 .nav-menu {
     display: flex;
     align-items: center;
-    
+
 }
 
 .about-webstudio {
@@ -74,7 +75,7 @@ header {
     line-height: 1.07;
     letter-spacing: 0.02em;
     max-width: 496px;
-    }
+}
 
 .button-style {
     background-color: #4d5ae5;
@@ -84,10 +85,10 @@ header {
     line-height: 1.5;
     letter-spacing: 0.04em;
     font-family: "Roboto", sans-serif;
-    display:block;
-    margin:0 auto;
+    display: block;
+    margin: 0 auto;
     min-width: 169px;
-    height: 56px ;
+    height: 56px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -98,7 +99,7 @@ header {
 .button-style:focus {
     background-color: #404bbf;
     color: #ffffff;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .header-two {
@@ -110,7 +111,7 @@ header {
     text-align: center;
     text-transform: capitalize;
     margin-bottom: 72px;
-    
+
 }
 
 .team-list {
@@ -121,7 +122,7 @@ header {
 .about-websudio-list {
     display: flex;
     gap: 24px;
-   
+
 }
 
 
@@ -148,14 +149,26 @@ header {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2E2F42;
+    color: #404bbf;
     padding: 24px 0;
     position: relative;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
 
+  .nav-menu-list a::after {
+      content: '';
+      width: 100%;
+      height: 4px;
+      background-color: #404bbf;
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+      border-radius: 2px;
+  }
+  
 .nav-menu-list {
     display: flex;
     padding: 24px 0;
@@ -168,7 +181,7 @@ header {
     gap: 40px;
 }
 
-.address-list{
+.address-list {
     display: flex;
     gap: 40px;
 }
@@ -180,7 +193,7 @@ header {
 
 .logo-link {
     font-weight: 700;
-    font-size:18px;
+    font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     color: #404bbf;
@@ -188,7 +201,7 @@ header {
     text-transform: uppercase;
     margin-right: 76px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+
 
 }
 
@@ -205,6 +218,7 @@ header {
     font-family: "Roboto", sans-serif;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .address-font:hover,
 .address-font:focus {
     color: #404bbf;
@@ -233,20 +247,21 @@ header {
     font-weight: 400;
     font-size: 16px;
     letter-spacing: 0.02em;
-    line-height: 1.5; 
+    line-height: 1.5;
 }
 
 .footer-part {
     background-color: #2e2f42;
     padding: 100px 0;
-} 
+}
+
 .team-card {
     flex-basis: calc((100% - 72px)/4);
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
-                0px 1px 1px rgba(46, 47, 66, 0.16), 
-                0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .one-card {
@@ -273,12 +288,13 @@ header {
     padding: 32px 0;
 
 }
+
 .footer-and {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
-}  
+}
 
 .our-team {
     background-color: #f4f4fd;
@@ -357,6 +373,5 @@ header {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: background-color 20ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: background-color 20ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
