--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ header {
       bottom: -1px;
       border-radius: 2px;
   }
-  
+
 .nav-menu-list {
     display: flex;
     padding: 24px 0;
@@ -334,20 +334,33 @@ header {
 .member-info-social-icon-container {
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 24px;
     padding: 0 10px;
 }
 
 .member-info-social-icon-item {
+    width: 40px;
+    height: 40px;
     display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #4d5ae5;
     border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: background-color 20ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+  .member-info-social-icon-item:hover,
+  .member-info-social-icon-item:focus {
+      background-color: #404bbf;
+  }
+
+  .member-info-social-icon-item svg {
+      width: 16px;
+      height: 16px;
+      fill: #f4f4fd;
+  }
+
+  
 .footer-container {
     display: flex;
 
