--- a/css/styles.css
+++ b/css/styles.css
@@ -339,8 +339,8 @@ header {
 }
 
 .member-info-social-icon-item {
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -360,7 +360,7 @@ header {
       fill: #f4f4fd;
   }
 
-  
+
 .footer-container {
     display: flex;
 
@@ -387,4 +387,22 @@ header {
     align-items: center;
     cursor: pointer;
     transition: background-color 20ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-media-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}  
+
+.social-media-item {
+    width: 40px;
+    height: 40px;
+} 
+
+.social-media-icon {
+    width: 16px;
+    height: 16px;
+    fill: #f4f4fd;
+
 }
