--- a/css/styles.css
+++ b/css/styles.css
@@ -393,7 +393,10 @@ header {
     display: flex;
     justify-content: center;
     gap: 24px;
-}  
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 
 .social-media-item {
     width: 40px;
@@ -405,4 +408,20 @@ header {
     height: 16px;
     fill: #f4f4fd;
 
+}
+
+.social-media-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.social-media-link:hover,
+.social-media-link:focus {
+    background-color: #404bbf;
 }
